--- a/src/styles/components/_toast.scss
+++ b/src/styles/components/_toast.scss
@@ -1,6 +1,10 @@
-@import "../base/variables";
+@import '../base/variables';
 
 .toast {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+
   position: relative;
   visibility: hidden;
   opacity: 0;
@@ -9,7 +13,7 @@
   align-items: center;
 
   min-height: 30px;
-  min-width: 280px;
+  min-width: 240px;
   max-width: 320px;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba($color: $dark, $alpha: 0.12);
@@ -37,6 +41,7 @@
     margin: 0;
     font-size: 0.875rem;
     padding-right: 30px;
+    text-align: left;
 
     a {
       color: $white;
@@ -61,8 +66,8 @@
     transform: translateY(-50%);
     right: 8px;
     padding: 8px;
-    width: 20px;
-    height: 20px;
+    // width: 20px;
+    // height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -93,7 +98,7 @@
   @each $name, $colorMap in $colors {
     &.toast--#{$name} {
       .toast__progress {
-        background-color: map-get($map: $colorMap, $key: "color");
+        background-color: map-get($map: $colorMap, $key: 'color');
       }
     }
   }
@@ -102,7 +107,7 @@
   &.toast--filled {
     @each $name, $colorMap in $colors {
       &.toast--#{$name} {
-        background-color: map-get($map: $colorMap, $key: "color");
+        background-color: map-get($map: $colorMap, $key: 'color');
       }
     }
 
